--- a/todos/client/templates/lists-show.html
+++ b/todos/client/templates/lists-show.html
@@ -1,9 +1,9 @@
 <template name="listsShow">
   <div class="page lists-show">
     <nav class="js-title-nav">
-      {{#if editing}}
+      {{#if editingTitle}}
         <form class="js-edit-form list-edit-form">
-          <input type="text" name="name" value="{{name}}">
+          <input type="text" name="name" value="{{list.name}}">
           <div class="nav-group right">
             <a href="#" class="js-cancel nav-item"><span class="icon-close js-cancel" title="Cancel"></span></a>
           </div>
@@ -13,13 +13,13 @@
           <a href="#" class="js-menu nav-item"><span class="icon-list-unordered" title="Show menu"></span></a>
         </div>
 
-        <h1 class="js-edit-list title-page"><span class="title-wrapper">{{name}}</span> <span class="count-list">{{incompleteCount}}</span></h1>
+        <h1 class="js-edit-list title-page"><span class="title-wrapper">{{list.name}}</span> <span class="count-list">{{list.incompleteCount}}</span></h1>
 
         <div class="nav-group right">
           <div class="nav-item options-mobile">
             <select class="list-edit">
               <option disabled selected>Select an action</option>
-              {{#if userId}}
+              {{#if list.userId}}
                 <option value="public">Make Public</option>
               {{else}}
                 <option value="private">Make Private</option>
@@ -53,22 +53,18 @@
 
     <div class="content-scrollable list-items">
       {{#if todosReady}}
-        {{#with _id}} {{! Establish new data context with only the '_id'
-                          field. This way, when the 'incompleteCount' field
-                          changes, we don't re-render the list contents }}
-          {{#each todos this}}
-            {{> todosItem this}}
-          {{else}}
-            <div class="wrapper-message">
-              <div class="title-message">No tasks here</div>
-              <div class="subtitle-message">Add new tasks using the field above</div>
-            </div>
-          {{/each}}
-        {{/with}}
-      {{else}}
+        {{#each todos _id}}
+          {{> todosItem _id=this._id listId=this.listId setSelected=setSelected selectedItem=selectedItem}}
+        {{else}}
           <div class="wrapper-message">
-            <div class="title-message">Loading tasks...</div>
+            <div class="title-message">No tasks here</div>
+            <div class="subtitle-message">Add new tasks using the field above</div>
           </div>
+        {{/each}}
+      {{else}}
+        <div class="wrapper-message">
+          <div class="title-message">Loading tasks...</div>
+        </div>
       {{/if}}
     </div>
   </div>
