Move subscriptions into components

--- a/todos/client/templates/app-body.html
+++ b/todos/client/templates/app-body.html
@@ -57,7 +57,11 @@
 
     <div id="content-container">
       {{#each thisArray}}
-        {{> yield}}
+        {{#if loading}}
+          {{> appLoading}}
+        {{else}}
+          {{> yield}}
+        {{/if}}
       {{/each}}
     </div>
   </div>
