--- a/todos/client/templates/lists-show.html
+++ b/todos/client/templates/lists-show.html
@@ -1,71 +1,75 @@
 <template name="listsShow">
-  <div class="page lists-show">
-    <nav class="js-title-nav">
-      {{#if editingTitle}}
-        <form class="js-edit-form list-edit-form">
-          <input type="text" name="name" value="{{list.name}}">
+  {{#if list}}
+    <div class="page lists-show">
+      <nav class="js-title-nav">
+        {{#if editingTitle}}
+          <form class="js-edit-form list-edit-form">
+            <input type="text" name="name" value="{{list.name}}">
+            <div class="nav-group right">
+              <a href="#" class="js-cancel nav-item"><span class="icon-close js-cancel" title="Cancel"></span></a>
+            </div>
+          </form>
+        {{else}}
+          <div class="nav-group">
+            <a href="#" class="js-menu nav-item"><span class="icon-list-unordered" title="Show menu"></span></a>
+          </div>
+
+          <h1 class="js-edit-list title-page"><span class="title-wrapper">{{list.name}}</span> <span class="count-list">{{list.incompleteCount}}</span></h1>
+
           <div class="nav-group right">
-            <a href="#" class="js-cancel nav-item"><span class="icon-close js-cancel" title="Cancel"></span></a>
+            <div class="nav-item options-mobile">
+              <select class="list-edit">
+                <option disabled selected>Select an action</option>
+                {{#if list.userId}}
+                  <option value="public">Make Public</option>
+                {{else}}
+                  <option value="private">Make Private</option>
+                {{/if}}
+                <option value="delete">Delete</option>
+              </select>
+              <span class="icon-cog"></span>
+            </div>
+            <div class="options-web">
+              <a class="js-toggle-list-privacy nav-item">
+                {{#if userId}}
+                  <span class="icon-lock" title="Make list private"></span>
+                {{else}}
+                  <span class="icon-unlock" title="Make list public"></span>
+                {{/if}}
+              </a>
+
+              <a class="js-delete-list nav-item">
+                <span class="icon-trash" title="Delete list"></span>
+              </a>
+            </div>
           </div>
+        {{/if}}
+
+        <form class="js-todo-new todo-new input-symbol">
+          <input type="text" placeholder="Type to add new tasks">
+          <span class="icon-add js-todo-add"></span>
         </form>
-      {{else}}
-        <div class="nav-group">
-          <a href="#" class="js-menu nav-item"><span class="icon-list-unordered" title="Show menu"></span></a>
-        </div>
-
-        <h1 class="js-edit-list title-page"><span class="title-wrapper">{{list.name}}</span> <span class="count-list">{{list.incompleteCount}}</span></h1>
-
-        <div class="nav-group right">
-          <div class="nav-item options-mobile">
-            <select class="list-edit">
-              <option disabled selected>Select an action</option>
-              {{#if list.userId}}
-                <option value="public">Make Public</option>
-              {{else}}
-                <option value="private">Make Private</option>
-              {{/if}}
-              <option value="delete">Delete</option>
-            </select>
-            <span class="icon-cog"></span>
-          </div>
-          <div class="options-web">
-            <a class="js-toggle-list-privacy nav-item">
-              {{#if userId}}
-                <span class="icon-lock" title="Make list private"></span>
-              {{else}}
-                <span class="icon-unlock" title="Make list public"></span>
-              {{/if}}
-            </a>
-
-            <a class="js-delete-list nav-item">
-              <span class="icon-trash" title="Delete list"></span>
-            </a>
-          </div>
-        </div>
-      {{/if}}
-
-      <form class="js-todo-new todo-new input-symbol">
-        <input type="text" placeholder="Type to add new tasks">
-        <span class="icon-add js-todo-add"></span>
-      </form>
-    </nav>
+      </nav>
 
 
-    <div class="content-scrollable list-items">
-      {{#if todosReady}}
-        {{#each todos _id}}
-          {{> todosItem _id=this._id listId=this.listId setSelected=setSelected selectedItem=selectedItem}}
+      <div class="content-scrollable list-items">
+        {{#if todosReady}}
+          {{#each todos _id}}
+            {{> todosItem _id=this._id listId=this.listId setSelected=setSelected selectedItem=selectedItem}}
+          {{else}}
+            <div class="wrapper-message">
+              <div class="title-message">No tasks here</div>
+              <div class="subtitle-message">Add new tasks using the field above</div>
+            </div>
+          {{/each}}
         {{else}}
           <div class="wrapper-message">
-            <div class="title-message">No tasks here</div>
-            <div class="subtitle-message">Add new tasks using the field above</div>
+            <div class="title-message">Loading tasks...</div>
           </div>
-        {{/each}}
-      {{else}}
-        <div class="wrapper-message">
-          <div class="title-message">Loading tasks...</div>
-        </div>
-      {{/if}}
+        {{/if}}
+      </div>
     </div>
-  </div>
+  {{else}}
+    {{> appNotFound}}
+  {{/if}}
 </template>
